--- a/img4.html
+++ b/img4.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>img4-5</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="img4.css">
 </head>
+
 <body>
     <div>
         <h1>Zig-zag Boxes</h1>
         <hr>
-         <div>
+        <div>
             <div class="yellow"></div>
             <div class="green"></div>
             <div class="yellow"></div>
@@ -22,7 +24,7 @@
             <div class="green"></div>
             <div class="yellow"></div>
             <div class="green"></div>
-        </div>  
+        </div>
 
     </div>
 
@@ -32,19 +34,20 @@
         <br>
         <div>
 
-        <div class="num">1</div>
-        <div class="num">2</div>
-        <div class="num">3</div>
-        <div class="num">4</div>
-        <div class="num">5</div>
-        <div class="num">6</div>
-        <div class="num">7</div>
-        <div class="num">8</div>
-        <div class="num">9</div>
-        <div class="num">10</div>
+            <div class="num">1</div>
+            <div class="num">2</div>
+            <div class="num">3</div>
+            <div class="num">4</div>
+            <div class="num">5</div>
+            <div class="num">6</div>
+            <div class="num">7</div>
+            <div class="num">8</div>
+            <div class="num">9</div>
+            <div class="num">10</div>
         </div>
         <hr>
 
     </div>
 </body>
+
 </html>
